2010-09-19  Roland Levillain  <roland@lrde.epita.fr>

	Have topo::is_n_face take a psite type as class parameter.

	* mln/topo/is_n_face.hh: Here, so that the argument of this
	functor (e.g., an iterator) is always converted to the psite
	type.
	* apps/mesh-segm-skel/mesh-complex-max-curv-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-skel.cc:
	Adjust.

2010-09-17  Roland Levillain  <roland@lrde.epita.fr>

	Aesthetic changes in thinning algorithms.

	* mln/topo/skeleton/breadth_first_thinning.hh: Remove a comment.
	* mln/topo/skeleton/priority_driven_thinning.hh: Likewise.
	Rename p_queue to queue to avoid confusions with mln::p_queue and
	improve uniformity w.r.t. topo::breadth_first_thinning.

2010-09-17  Roland Levillain  <roland@lrde.epita.fr>

	Fix the processing order in topo::breadth_first_thinning.

	* mln/topo/skeleton/breadth_first_thinning.hh: Use a p_queue_fast
	site set instead of a pair of p_set's to ensure an actual
	breadth-first processing of sites.

2010-09-16  Roland Levillain  <roland@lrde.epita.fr>

	Split interface and implementation of topo::is_not_end_point.

	* mln/topo/is_not_end_point.hh: Here.

2010-09-15  Roland Levillain  <roland@lrde.epita.fr>

	Catch up with the renaming to detach_cell.

	* apps/mesh-segm-skel/mesh-complex-max-curv-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-skel.cc:
	s/detach/detach_cell/.

2010-09-15  Roland Levillain  <roland@lrde.epita.fr>

	Rename topo::detach as topo::detach_cell.

	* mln/topo/detach.hh (detach): Rename as...
	* mln/topo/detach_cell.hh (detach_cell): ...this, to prevent
	confusions with detach_point.
	* headers.mk: Regen.

2010-09-15  Roland Levillain  <roland@lrde.epita.fr>

	Exercise breadth-first and priority-driven thinnings.

	* tests/topo/skeleton/breadth_first_thinning.cc,
	* tests/topo/skeleton/breadth_first_thinning_constrained.cc,